--- a/index.html
+++ b/index.html
@@ -1,14 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>buyticket</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <h2>ВСЕМ КУ</h2>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/buyTicket/src/style.css">
+  <title>buyticket</title>
+</head>
+
+<body>
+  <div class="header-wraper">
+    <div class="container">
+      <header class="header">
+        <img src="/logo.png" alt="logo" class="header-bg__logo">
+        <h1 class="header-title">FIND BEST EVENTS <br>
+          AROUND THE WORLD</h1>
+        <div class="header-bottom">
+          <div class="header-bottom-l">
+            <input type="text" class="header-bottom-l__input" placeholder="Start searching">
+            <svg class="header-bottom-l__svg" width="12" height="12" viewBox="0 0 12 12" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1.509 1.50905C2.48213 0.535922 3.77595 0 5.15213 0C6.52831 0 7.82213 0.535922 8.79523 1.50905C9.76833 2.48215 10.3043 3.77597 10.3043 5.15213C10.3043 6.41032 9.85606 7.59949 9.03556 8.53786L11.8969 11.3992C12.0343 11.5366 12.0343 11.7595 11.8969 11.8969C11.8282 11.9656 11.7381 12 11.648 12C11.558 12 11.4679 11.9656 11.3992 11.8969L8.53786 9.03558C7.59949 9.85606 6.41032 10.3043 5.15213 10.3043C3.77592 10.3043 2.48215 9.76838 1.50902 8.79525C0.535922 7.82215 9.53674e-07 6.52833 9.53674e-07 5.15215C9.53674e-07 3.77597 0.535899 2.48215 1.509 1.50905ZM2.00672 8.29755C3.74112 10.0319 6.56311 10.0319 8.29751 8.29755C10.0319 6.56318 10.0319 3.74114 8.29751 2.00677C7.43023 1.13948 6.29135 0.705984 5.1521 0.705984C4.01313 0.705984 2.87379 1.1397 2.0067 2.00677C0.272367 3.74112 0.272367 6.56316 2.00672 8.29755Z"
+                fill="#939393" />
+            </svg>
+          </div>
+          <div class="header-bottom-r">
+            <input type="text" class="header-bottom-r__input" placeholder="Choose country">
+            <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6.49518 7.5L-1.20998e-05 2.69824e-07L12.9904 -8.65831e-07L6.49518 7.5Z" fill="#939393" />
+            </svg>
+          </div>
+      </header>
+     
+    </div>
+  </div>
+   <div class="main-wraper">
+    <div class="container">
+      <main class="main">
+        <div class="main-block">
+          <img src="/Rectangle 6.png" alt="" class="main-block__img">
+          <h2 class="main-block__title">Eurovision 2021 finals!</h2>
+          <span class="main-block__date">2021-05-13</span>
+          <div class="main-block-bot">
+            <svg width="7" height="10" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M3.5 0C1.57011 0 0 1.55933 0 3.47595C0 5.88495 3.50344 10 3.50344 10C3.50344 10 7 5.76648 7 3.47595C7 1.55933 5.42995 0 3.5 0ZM4.55602 4.49371C4.26484 4.78284 3.88245 4.92743 3.5 4.92743C3.11761 4.92743 2.7351 4.78284 2.44404 4.49371C1.86173 3.91547 1.86173 2.97455 2.44404 2.39624C2.72601 2.11609 3.10108 1.96179 3.5 1.96179C3.89892 1.96179 4.27393 2.11615 4.55602 2.39624C5.13833 2.97455 5.13833 3.91547 4.55602 4.49371Z"
+                fill="white" />
+               
+            </svg>
+             <a href="" class="main-block-bot-geo">Palace of Ukraine</a>
+          </div>
+        </div>
+      </main> 
+    </div>
+   </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
