--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
 </head>
 
 <body>
+  <div class="overlay">
+    <div class="modal">
+      <img src="/pic circle.png" alt="" class="modal__logo">
+      <div class="modal-body">
+        <img src="/pic (2).png" alt="" class="modal-body__img">
+        <div class="modal-body-info">
+          <h2 class="modal-body-info__title">INFO</h2>
+          <p class="modal-body-info__text">Atlas Weekend is the largest music festival
+            in Ukraine.More than 200 artists will create
+            a proper music festival atmosphere on 10 stages</p>
+            <h2 class="modal-body-info__title">WHEN</h2>
+            <span class="modal-body-info__text">2021-06-09</span>
+            <p class="modal-body-info__text">20:00 (Kyiv/Ukraine)</p>
+             <h2 class="modal-body-info__title">WHERE</h2>
+             <span class="modal-body-info__text">Kyiv, Ukraine </span>
+            <p class="modal-body-info__text">VDNH</p>
+             <h2 class="modal-body-info__title">WHO</h2>
+             <p class="modal-body-info__text">The Black Eyed Peas</p>
+             <h2 class="modal-body-info__title">PRICE</h2>
+             <img src="/ticket1.png" alt="" class="modal-body-info__img">
+             <span class="modal-body-info__text">Standart 300-500 UAH</span>
+             button.
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Модальне вікно -->
   <div class="header-wraper">
     <div class="container">
       <header class="header">
@@ -33,10 +61,10 @@
             </svg>
           </div>
       </header>
-     
+
     </div>
   </div>
-   <div class="main-wraper">
+  <div class="main-wraper">
     <div class="container">
       <main class="main">
         <div class="main-block">
@@ -48,14 +76,17 @@
               <path
                 d="M3.5 0C1.57011 0 0 1.55933 0 3.47595C0 5.88495 3.50344 10 3.50344 10C3.50344 10 7 5.76648 7 3.47595C7 1.55933 5.42995 0 3.5 0ZM4.55602 4.49371C4.26484 4.78284 3.88245 4.92743 3.5 4.92743C3.11761 4.92743 2.7351 4.78284 2.44404 4.49371C1.86173 3.91547 1.86173 2.97455 2.44404 2.39624C2.72601 2.11609 3.10108 1.96179 3.5 1.96179C3.89892 1.96179 4.27393 2.11615 4.55602 2.39624C5.13833 2.97455 5.13833 3.91547 4.55602 4.49371Z"
                 fill="white" />
-               
+
             </svg>
-             <a href="" class="main-block-bot-geo">Palace of Ukraine</a>
+            <a href="" class="main-block-bot-geo">Palace of Ukraine</a>
           </div>
         </div>
-      </main> 
+      </main>
+      <footer class="footer">
+        <p class="footer__text">© 2021 | All Rights Reserved | Developed with ❤️ by GoIT Students</p>
+      </footer>
     </div>
-   </div>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
